@@ -1,6 +1,11 @@
-# This configuration file is not for testing, but to prevent
-# tools/buildhtml.py from processing text files in and below
-# this directory.
+[general]
+# This tests the test framework; this config file should *not* be read
+# when testing.
+source-link: yes
+datestamp: %Y-%m-%d %H:%M UTC (If you see this in test output, there's a bug in the test code!)
+generator: on
 
 [buildhtml application]
+# This part is not for testing, but to prevent tools/buildhtml.py from
+# processing text files in and below this directory.
 prune: .
